Connected to Azure

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 logging.level.org.optaplanner=debug
 optaplanner.solver.termination.spent-limit=5s
 
-spring.datasource.url=jdbc:sqlserver://cinerverse-private.database.windows.net:1433;database=cineverse;user=Eugence1117@cinerverse-private;password={Eugence0679.};encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
-
-spring.datasource.initialization-mode=always
+sql-db=cineverse
+sql-username=Eugence1117
+sql-password=Eugence0679.
+sql-servername=cinerverse-private
+spring.datasource.url=jdbc:sqlserver://cinerverse-private.database.windows.net:1433;database=cineverse;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
+spring.datasource.username=Eugence1117
+spring.datasource.password=Eugence0679.
