--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,16 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
   
+  <context-param>
+    <param-name>contextConfigLocation</param-name>
+    <param-value>
+      /WEB-INF/masterpisportal-servlet.xml
+    </param-value>
+</context-param>
+
+  <listener> 
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class> 
+</listener>
   <listener>
     <listener-class>org.springframework.security.web.session.HttpSessionEventPublisher</listener-class>
   </listener>
