--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,7 +16,10 @@
     <servlet-name>masterpisportal</servlet-name>
     <url-pattern>*.json</url-pattern>
   </servlet-mapping>
-
+	
+  <error-page>
+    <location>/error</location>
+  </error-page>
 <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
