Session expired feature added, Theatre module enhanced

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,10 +16,10 @@
     <servlet-name>masterpisportal</servlet-name>
     <url-pattern>*.json</url-pattern>
   </servlet-mapping>
-	
-  <error-page>
+  
+  <!-- <error-page>
     <location>/error.htm</location>
-  </error-page>
+  </error-page> -->
 <filter>
     <filter-name>springSecurityFilterChain</filter-name>
     <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -49,6 +49,6 @@
 	</listener-class>
   </listener>
   <session-config>
-  	<session-timeout>15</session-timeout>
+  	<session-timeout>30</session-timeout>
   </session-config>
 </web-app>
