--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ sql-db=cineverse
 sql-username=Eugence1117
 sql-password=Eugence0679.
 sql-servername=cinerverse-private
+spring.datasource.tomcat.max-active=50
 spring.datasource.url=jdbc:sqlserver://cinerverse-private.database.windows.net:1433;database=cineverse;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.datasource.username=Eugence1117
 spring.datasource.password=Eugence0679.spring.cloud.azure.credential-file-path=my.azureauth
