--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -48,6 +48,9 @@
 		org.springframework.web.context.request.RequestContextListener
 	</listener-class>
   </listener>
+  <listener>
+  	<listener-class>com.ms.config.contextListener</listener-class>
+  </listener>
   <session-config>
   	<session-timeout>15</session-timeout>
   </session-config>
