--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.ms</groupId>
-	<artifactId>MasterPisPortal</artifactId>
+	<artifactId>Cineverse</artifactId>
 	<version>1.0</version>
 	<packaging>war</packaging>
-	<name>MasterPisPortal</name>
-	<description>Admin Portal for MasterPis</description>
+	<name>Cineverse</name>
+	<description>Admin Portal for Cineverse</description>
 
 	<properties>
 		<java.version>1.8</java.version>
