Implemented Jasper Report

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ azure.storage.ConnectionString=DefaultEndpointsProtocol=https;AccountName=cineve
 azure.storage.container.name=movieimg
 
 server.max-http-header-size=30960
+
+### Freemarker configuration ###
