--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,17 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.9.4</version>
 		</dependency>
-
+		
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-test</artifactId>
+		    <scope>test</scope>
+		</dependency>
+		 <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.11.0</version>
+        </dependency>
 		<!-- Spring Data JPA <dependency> <groupId>org.springframework.data</groupId> 
 			<artifactId>spring-data-jpa</artifactId> <version>1.9.2.RELEASE</version> 
 			</dependency> -->
