--- a/pom.xml
+++ b/pom.xml
@@ -96,17 +96,50 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.9.4</version>
 		</dependency>
-		
+		<!-- https://mvnrepository.com/artifact/org.jfree/jcommon
 		<dependency>
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-test</artifactId>
-		    <scope>test</scope>
+		    <groupId>org.jfree</groupId>
+		    <artifactId>jcommon</artifactId>
+		    <version>1.0.21</version>
+		</dependency>--> 
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports-custom-visualization
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-custom-visualization</artifactId>
+		    <version>6.16.0</version>
+		</dependency> -->
+		
+		<!-- https://mvnrepository.com/artifact/org.jfree/jfreechart
+		<dependency>
+		    <groupId>org.jfree</groupId>
+		    <artifactId>jfreechart</artifactId>
+		    <version>1.0.19</version>
+		</dependency> -->
+
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports-fonts -->
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-fonts</artifactId>
+		    <version>6.17.0</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports-chart-themes -->
+		<dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-chart-themes</artifactId>
+		    <version>6.17.0</version>
+		</dependency>
+		
 		 <dependency>
             <groupId>net.sf.jasperreports</groupId>
             <artifactId>jasperreports</artifactId>
-            <version>6.11.0</version>
+            <version>6.17.0</version>
         </dependency>
+        <dependency>
+		    <groupId>net.sf.jasperreports</groupId>
+		    <artifactId>jasperreports-chart-customizers</artifactId>
+		    <version>6.17.0</version>
+		</dependency>
 		<!-- Spring Data JPA <dependency> <groupId>org.springframework.data</groupId> 
 			<artifactId>spring-data-jpa</artifactId> <version>1.9.2.RELEASE</version> 
 			</dependency> -->
