--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	<packaging>war</packaging>
 	<name>Cineverse</name>
 	<description>Admin Portal for Cineverse</description>
-
+	<!--Build With Java8(1.8)-->
 	<properties>
 		<java.version>1.8</java.version>
 		<spring.version>4.3.12.RELEASE</spring.version>
