--- a/pom.xml
+++ b/pom.xml
@@ -292,7 +292,7 @@
 		</profile>
 	</profiles>
 	<build>
-		<finalName>masterpisportal</finalName>
+		<finalName>CineversePortal</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
