--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -2,18 +2,18 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" version="3.0">
   <display-name>MS Portal</display-name>
   <servlet>
-    <servlet-name>masterpisportal</servlet-name>
+    <servlet-name>CineversePortal</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>masterpisportal</servlet-name>
+    <servlet-name>CineversePortal</servlet-name>
     <url-pattern>*.htm</url-pattern>
   </servlet-mapping>
   
   <servlet-mapping>
-    <servlet-name>masterpisportal</servlet-name>
+    <servlet-name>CineversePortal</servlet-name>
     <url-pattern>*.json</url-pattern>
   </servlet-mapping>
   
@@ -33,7 +33,7 @@
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
-      /WEB-INF/masterpisportal-servlet.xml
+      /WEB-INF/CineversePortal-servlet.xml
     </param-value>
 </context-param>
 
