--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,6 +14,6 @@ azure.storage.ConnectionString=DefaultEndpointsProtocol=https;AccountName=cineve
 azure.storage.container.name=movieimg
 
 server.max-http-header-size=30960
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 ### Freemarker configuration ###
