--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,2 +1,3 @@
-spring.cookie.domain=localhost
-spring.cookie.path=/masterpisportal
+spring.cookie.domain=localhost 
+spring.cookie.path=/CineversePortal
+
